<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/topPanel"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_title"
            android:title="@string/AppName"
            android:icon="@drawable/ic_app_icon"/>
    </group>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/nav_terms"
        android:icon="@drawable/ic_terms"
        android:title="@string/terms_of_use" />
    <group
        android:id="@+id/bottom_group"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_version"
            android:title="@string/app_version" />
    </group>
</menu>